# ElectOMate-Backend

./: .Dockerignore  .dockerignore  .env-sample  .env.example  .env.graph.example  .funcignore  .gitignore  .helmignore  .mcp.json  CLAUDE.md  Chart.yaml  Dockerfile  Dockerfile.prod  FINAL_FIX_SUMMARY.md  GermanyPage.tsx  Makefile  README.md  READMe_Docker_Problems_on_MacOS.md  Readme.md  ToBeFixed_Chunking_sessiontimout_contextlengthexceeded.md  acr-build-task.yml  alembic.ini  app.py  browseruseAPI.py  calculation.py  clients.py  cluster-issuer.yaml  create_index.py  docker-compose.graph.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  documents.csv  em_dev.dump  em_dev.sql  em_dev_data.sql  function_app.py  graph.py  log_of_backend_chunking_new_tobedeleted.md  main.py  (+12 more)
BrowserUse/: BrowserUse.py
Questionaire_Results_Folder/: .gitignore  README.md
Quiz_Results_Folder/: quiz_20251108_054437_e1295327.json  quiz_20251108_055634_6b25c5ca.json  quiz_20251108_055635_75e16f26.json  quiz_20251108_055635_ac12a628.json  quiz_20251108_055635_b8ea3257.json  quiz_20251108_055635_dc838821.json  quiz_20251108_055635_e1b9fba9.json  quiz_20251108_055801_37b68632.json  quiz_20251108_055808_94edecdd.json  quiz_20251108_055820_74e87aba.json  quiz_20251108_060002_828290da.json  quiz_20251108_060256_7f353026.json  quiz_20251108_060605_7f5c10db.json  quiz_20251108_060624_99cd22de.json  quiz_20251108_060720_421caff6.json  quiz_20251108_060743_74f00334.json  quiz_20251108_060754_b5ca2197.json  quiz_20251108_180633_54796b26.json  quiz_20251108_180640_a296d831.json  (+9 more)
(+366 files in other folders)
